more web updates

--- a/src/main_web/index_template.html
+++ b/src/main_web/index_template.html
@@ -4,9 +4,9 @@
 	<meta charset="utf-8">
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 
-	<title>Odin + Raylib on the web</title>
-	<meta name="title" content="Odin + Raylib on the web">
-	<meta name="description" content="Make games using Odin + Raylib that work in the browser">
+	<title>Chess</title>
+	<meta name="title" content="Chess">
+	<meta name="description" content="Simple chess engine">
 	<meta name="viewport" content="width=device-width">
 
 	<style>
